# dc-qiskit-qml

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  Makefile  README.rst  Readme.rst  pyproject.toml  requirements.txt  setup.py
dc_qiskit_qml/: QiskitOptions.py  __init__.py  _version.py
dc_qiskit_qml/distance_based/: __init__.py
dc_qiskit_qml/distance_based/compact_hadamard/: compact_hadamard_classifier.py
dc_qiskit_qml/distance_based/hadamard/: _QmlHadamardNeighborClassifier.py  __init__.py
dc_qiskit_qml/distance_based/hadamard/state/: _QmlBinaryDataStateCircuitBuilder.py  _QmlGenericStateCircuitBuilder.py  _QmlStateCircuitBuilder.py  __init__.py  _measurement_outcome.py
dc_qiskit_qml/distance_based/hadamard/state/cnot/: _CCXFactory.py  _CCXMottonen.py  _CCXMöttönen.py  _CCXToffoli.py  __init__.py
dc_qiskit_qml/distance_based/hadamard/state/sparsevector/: _MottonenStatePreparation.py  _MöttönenStatePreparation.py  _QiskitNativeStatePreparation.py  _QmlFFQramStatePreparation.py  _QmlSparseVectorStatePreparation.py  __init__.py
dc_qiskit_qml/encoding_maps/: _EncodingMap.py  _FixedLengthQubitEncoding.py  _Float32QubitEncoding.py  _IdentityEncodingMap.py  _NormedAmplitudeEncoding.py  __init__.py
dc_qiskit_qml/feature_maps/: _FeatureMap.py  _FixedLengthQubitEncoding.py  _Float32QubitEncoding.py  _IdentityFeatureMap.py  _NormedAmplitudeEncoding.py  __init__.py
docs/: Makefile
docs/source/: Makefile  conf.py  index.rst  requirements.txt
docs/source/_ext/: edit_on_github.py
examples/: Iris Example Full data.ipynb  Iris Example.ipynb  NOT Example More in-depth.ipynb  NOT Example.ipynb  Wine Data Set Example.ipynb  Wine Data Set Full Data full features.ipynb  Wine Data Set Full Data.ipynb
tests/: __init__.py  test_QmlBinaryDataStateCircuitBuilder.py  test_QmlBinaryDataStateCircuitBuilder.py.py  test_QmlGenericStateCircuitBuilder.py  test_QmlHadamardNeighborClassifier.py  test_QubitEncodingClassifierStateCircuit.py  test_compact_hadamard_classifier.py
