[tool.poetry]
name = "dc-qiskit-qml"
version = "0.0.3"
description = ""
authors = [
    "Carsten Blank <blank@data-cybernetics.com>",
    "Sebastian Boerakker <boerakker@data-cybernetics.com>"
]
readme = "README.rst"
packages = [
    {include = "dc_qiskit_qml"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
bitstring = "*"
qclib = "*"
qiskit-aer = "*"
dc-qiskit-algorithms = { git = "https://github.com/carstenblank/dc-qiskit-algorithms.git", branch = "feature/update_version"}

[tool.poetry.group.dev.dependencies]
jupyter = "*"
matplotlib = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"